# money_collect_service

./: .env.example  .flake8  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
api/: models.py  serializers.py  tasks.py  views.py
api/management/commands/: __init__.py  seed_data.py
api/migrations/: 0001_initial.py
collect_service/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
